# sam2-gui-annotator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/app/: events.py  gui.py
src/app/widgets/: annotation_canvas.py
src/controllers/: annotation_controller.py
src/models/: annotation_state.py
src/services/: image_loader.py  sam_runner.py  storage.py  video_loader.py
src/utils/: config.py
tests/: test_app.py
