[tool.poetry]
name = "sam2-gui-annotator"
version = "0.1.0"
description = "A GUI application for annotating segmentations using SAM2."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
tqdm = "^4.62.3"
matplotlib = "^3.4.3"
ultralytics = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"